# Curso-Python-Projetos

./: README.md  pyproject.toml
Curso_GIT_Guanabara/: aula_github_01.py  aula_github_02.py
Curso_Python_Guanabara/Aulas/: aula011.py  aula012.py  aula013.py  aula014.py  aula015.py  aula016.py  aula017_parte01.py  aula017_parte02.py  aula018.py  aula020_parte01.py  aula020_parte02.py  aula021.py  aula022.py  aula04.py  aula08.py  aula09.py  aula10.py  uteis_aula021.py
Curso_Python_Guanabara/Exercicios/: cursoemvideo.txt  exercicio005.py  exercicio006.py  exercicio007.py  exercicio008.py  exercicio009.py  exercicio010.py  exercicio011.py  exercicio012.py  exercicio013.py  exercicio014.py  exercicio015.py  exercicio016.py  exercicio017.py  exercicio018.py  exercicio019.py  exercicio020.py  exercicio022.py  exercicio023.py  exercicio024.py  exercicio025.py  exercicio026.py  exercicio027.py  exercicio028.py  exercicio029.py  exercicio030.py  exercicio031.py  exercicio032.py  exercicio033.py  exercicio034.py  exercicio035.py  exercicio036.py  exercicio037.py  exercicio038.py  exercicio039.py  exercicio040.py  exercicio041.py  exercicio042.py  exercicio043.py  exercicio044.py  (+70 more)
Curso_Thiago/Aulas/: aula010.py  aula011.py  aula012.py  aula013.py  aula014.py  aula015.py  aula016.py  aula02.py  aula03.py  aula04.py  aula05.py  aula06_parte01.py  aula06_parte02.py  aula08.py  aula09.py
Curso_Thiago/Exercicios/: Ex.01.py
Ex_Python_DiretoAoPonto/Expressoes_Condicionais/: exercicio001.py  exercicio002.py  exercicio003.py  exercicio004.py  exercicio005.py  exercicio006.py  (+13 more)
(+126 files in other folders)
